--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,3 +1,22 @@
-<p>
-  cadastro works!
-</p>
+<ion-content>
+  <!-- <ion-header>
+    <ion-toolbar>
+      <ion-title>
+        Login
+      </ion-title>
+    </ion-toolbar>
+  </ion-header> -->
+  <ion-content class="ion-padding">
+    <ng-container>
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input [(ngModel)]="email" type="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Senha</ion-label>
+        <ion-input [(ngModel)]="senha" type="password"></ion-input>
+      </ion-item>
+      <ion-button expand="full" (click)="cadastrar(email, senha)">Cadastrar</ion-button>
+    </ng-container>
+    <ion-loading></ion-loading>
+  </ion-content>
