--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
         <ion-label routerLink="/favorites" (click)="menu.close()">Favoritos</ion-label>
       </ion-item>
       <ion-item *ngIf="autenticado">
+        <ion-label routerLink="/integrantes" (click)="menu.close()">Integrantes</ion-label>
+      </ion-item>
+      <ion-item *ngIf="autenticado">
         <ion-label routerLink="/login" (click)="logout()">Deslogar</ion-label>
       </ion-item>
     </ion-list>
@@ -30,7 +33,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu</ion-title>
+      <ion-img class="logo-img" src="assets/logo.png" alt="Logo"></ion-img>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
