--- a/src/app/favorites/favorites.page.html
+++ b/src/app/favorites/favorites.page.html
@@ -1,7 +1,7 @@
 <!-- favorites.page.html -->
 
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="success">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/characters"></ion-back-button>
     </ion-buttons>
